--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Hello World</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel mollitia similique nihil maiores, quis ad aliquid
+        deleniti sed aut fugit corporis ex repellendus neque a quam accusamus assumenda dolorem. Voluptates!</p>
 </body>
+
 </html>
